--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Vertical Image Scroll</title>
+  <title>Seamless Vertical Scroll</title>
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9;
-      text-align: center;
-      font-family: sans-serif;
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: #000;
+      overflow-x: hidden;
     }
 
     img {
-      max-width: 90%;
+      display: block;
+      width: 100vw;          /* full screen width */
       height: auto;
-      margin: 40px 0;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      object-fit: cover;
     }
   </style>
 </head>
