feat: change title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Seamless Vertical Scroll</title>
+  <title>Anton and Dea</title>
   <style>
     * {
       margin: 0;
